--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,4 @@ bin/
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
 *.xml
 *.xml___jb_tmp___
+*.xml
